modules/gdscript/tests/scripts/parser/errors/struct_no_identifier.gd
struct     :
    var oops

func test():
    pass
